<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Emborrachar.me</string>
    <string name="emborrachar">Emborrachar</string>
    <string name="dotme">.me</string>
    <string name="get_botillerias">http://177.71.186.99/api/search?format=json</string>
    <string name="menu_normal">Vista normal</string>
    <string name="menu_satellite">Vista Satellite</string>
    <string name="menu_help">Ayuda</string>
	<string name="search_hint">Busca cerca de un lugar</string>
	<string name="has_food">Hay abarrotes</string>
	<string name="has_coal">Hay carbón</string>
	<string name="has_ice">Hay hielo</string>
	<string name="no_selected">No has seleccionado nada</string>
	<string name="search">Buscar</string>
	<string name="help">Ayuda</string>
	<string name="symbols">Simbología</string>
	<string name="not_found">¿Conoces una botillería que no está en el mapa? Regístrala gratis en</string>
	<string name="url">http://emborrachar.me/registro_botilleria/</string>
</resources>