<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/balloon_shape" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/bot_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_selected"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/bot_food"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/has_food" />

        <ImageView
            android:id="@+id/bot_coal"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/has_coal" />
    </LinearLayout>

    <TextView
        android:id="@+id/bot_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/bot_horario1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/bot_horario2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>